fixed editor content loading, added functionality behind create post button

--- a/mucklib/webcore/static/css/editor.css
+++ b/mucklib/webcore/static/css/editor.css
@@ -17,6 +17,10 @@ body {
     height: 400px;
 }
 
+#edit-text{
+    display: none;
+}
+
 #edit-preview {
     height: 400px;
     overflow-y: auto;
